--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <h1>Hello world</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dignissimos autem id rem iusto sed explicabo ea facilis impedit fugiat, perferendis dolor. Reiciendis, obcaecati modi beatae impedit quasi molestias dolor!</p>
 </body>
 </html>
